# deckbuilder

./: .gitignore  README.md  deckbuilder.cabal  hie.yaml  stack.yaml
app/: Main.hs  Main.lhs
src/: DeckBuilding.hs  Lib.hs
src/DeckBuilding/: Dominion.hs  Legendary.hs  Types.hs
src/DeckBuilding/Dominion/: Cards.hs  DominionTree.hs  Pretty.hs  Types.hs  Utils.hs
src/DeckBuilding/Dominion/Cards/: Base.hs  Intrigue.hs  Seaside.hs  Utils.hs
src/DeckBuilding/Dominion/Strategies/: Basic.hs  Utils.hs
src/DeckBuilding/Legendary/: Types.hs  Utils.hs
src/DeckBuilding/Legendary/Cards/: Base.hs  Utils.hs
src/DeckBuilding/Legendary/Strategies/: Basic.hs
test/: DominionSpec.hs  LegendarySpec.hs  Spec.hs
test/Dominion/: CardsSpec.hs  DominionTreeSpec.hs  Utils.hs
test/Dominion/Cards/: BaseSpec.hs  IntrigueSpec.hs  SeasideSpec.hs
