name:                deckbuilder
version:             0.1.0.2
-- synopsis:
-- description:
homepage:            https://github.com/myshoggoth/deckbuilder#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew F. Boardman
maintainer:          andrew@myshoggoth.com
copyright:           2017 Andrew F. Boardman
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeckBuilding
                     , DeckBuilding.Types
                     , DeckBuilding.Dominion
                     , DeckBuilding.Dominion.Types
                     , DeckBuilding.Dominion.Utils
                     , DeckBuilding.Dominion.Cards
                     , DeckBuilding.Dominion.Cards.Base
                     , DeckBuilding.Dominion.Cards.Intrigue
                     , DeckBuilding.Dominion.Cards.Utils
                     , DeckBuilding.Dominion.Strategies.Basic
                     , DeckBuilding.Dominion.Strategies.Utils
                     , DeckBuilding.Legendary
                     , DeckBuilding.Legendary.Types
                     , DeckBuilding.Legendary.Utils
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle
                     , MonadRandom
                     , random
                     , containers
                     , lens
                     , mtl
                     , dlist
                     , generic-lens
                     , safe
  default-language:    Haskell2010

executable deckbuilder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deckbuilder
                     , random
                     , lens
                     , dlist
                     , cmdargs
  default-language:    Haskell2010

test-suite deckbuilder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , deckbuilder
                     , random
                     , hspec
                     , lens
                     , mtl
                     , containers
                     , dlist
                     , generic-lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       DominionSpec
                     , Dominion.CardsSpec
                     , Dominion.Cards.BaseSpec
                     , Dominion.Cards.IntrigueSpec
                     , Dominion.Utils
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myshoggoth/deckbuilder
