name:                deckbuilder
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/myshoggoth/deckbuilder#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew F. Boardman
maintainer:          andrew@myshoggoth.com
copyright:           2017-2021 Andrew F. Boardman
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DeckBuilding
                     , DeckBuilding.Types
                     , DeckBuilding.Dominion
                     , DeckBuilding.Dominion.Types
                     , DeckBuilding.Dominion.Utils
                     , DeckBuilding.Dominion.Cards
                     , DeckBuilding.Dominion.Cards.Base
                     , DeckBuilding.Dominion.Cards.Intrigue
                     , DeckBuilding.Dominion.Cards.Seaside
                     , DeckBuilding.Dominion.Cards.Utils
                     , DeckBuilding.Dominion.Strategies.Basic
                     , DeckBuilding.Dominion.Strategies.Utils
                     , DeckBuilding.Dominion.Pretty
--                     , DeckBuilding.Legendary
--                     , DeckBuilding.Legendary.Types
--                     , DeckBuilding.Legendary.Utils
--                     , DeckBuilding.Legendary.Cards.Utils
--                     , DeckBuilding.Legendary.Cards.Base
--                     , DeckBuilding.Legendary.Strategies.Basic
  build-depends:       base >= 4.7 && < 5
                     , cond
                     , containers
                     , random-shuffle
                     , MonadRandom
                     , random
                     , containers
                     , lens
                     , mtl
                     , dlist
                     , generic-lens
                     , prettyprinter
                     , parallel
                     , safe
                     , text
                     , generic-arbitrary >= 0.2.0
                     , QuickCheck >= 2.14
                     , quickcheck-instances
  default-language:    Haskell2010

executable deckbuilder-exe
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deckbuilder
                     , filepath
                     , random
                     , lens
                     , dlist
                     , cmdargs
                     , text
                     , generic-lens
                     , prettyprinter
                     , mtl
                     , extra
                     , QuickCheck >= 2.14
  default-language:    Haskell2010

test-suite deckbuilder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , deckbuilder
                     , dlist
                     , generic-lens
                     , hspec
                     , lens
                     , mtl
                     , random
                     , safe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       DominionSpec
                     , Dominion.CardsSpec
                     , Dominion.Cards.BaseSpec
                     , Dominion.Cards.IntrigueSpec
                     , Dominion.Cards.SeasideSpec
--                     , LegendarySpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myshoggoth/deckbuilder
